--- a/Signup/Signup.css
+++ b/Signup/Signup.css
@@ -3,3 +3,73 @@
 body {
     font-family: 'Prompt', sans-serif;
 }
+
+:root {
+    --main-color: #da8600;
+    --base-color: #ffffff;
+    --input-color: #ffffff;
+    --text-color: #d28100;
+
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 12px;
+    color: var(--text-color);
+    font-family: 'Prompt', sans-serif;
+    text-align: center;
+}
+
+body {
+    min-height: 100vh;
+    background-image: url(/Signup/img/bgthfood\,jpg.jpg);
+    background-size: cover;
+    background-position: right;
+    overflow: hidden;
+}
+
+.wrapper {
+    box-sizing: border-box;
+    background-color: var(--base-color);
+    height: 100vh;
+    width: max(40%, 600px);
+    padding: 10px;
+    border-radius: 0 20px 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 7rem;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+form {
+    width: min(400px, 100%);
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+form>div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+form label {
+    flex-shrink: 0;
+    height: 50px;
+    width: 50px;
+    background-color: var(--main-color);
+}
